namespace Dolphin.Dropbox
{
    public interface IDropbox
    {
        string GetPersonalDirectory();
    }
}