namespace Dolphin.IO.Tests
{
    public static class DirectoryTestCases
    {
        public static readonly string[] 目錄列表 = {"doc", "scripts", "contents"};
    }
}